# shipit-bot

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  containers.py  pyproject.toml
listeners/: actions.py  commands.py
services/: dev_ops_service.py  release_service.py
